<resources>
    <string name="app_name" translatable="false">YourMusic</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_list" translatable="false">ListActivity</string>
    <string name="title_activity_form" translatable="false">FormActivity</string>
    <string name="artist">Artist</string>
    <string name="albumName">Album Name</string>
    <string name="company">Company</string>
    <string name="appreciation">Appreciation</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cleanImage">Clean Image</string>
    <string name="Switch" translatable="false">Switch</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_configuration">Configuration</string>
    <string name="action_help">Help</string>
    <string name="action_aboutApp">About AppCRUD</string>
    <string name="findElements">10 albums found ...</string>
    <string name="title_activity_search" translatable="false">SearchActivity</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="searchbutton">Search</string>
    <string name="artistNameError">The artist name must start with a single capital letter and have more than 3 letters and less than 15 .You can put numbers too.</string>
    <string name="dateError">Valid date format is dd/mm/yyyy</string>
    <string name="companyNameError">The company name must start with a capital letter, minimum of 5 letters and a maximum of 15.</string>
    <string name="albumNameError">The album name must start with a capital letter, minimum of 5 letters and a maximum of 20.</string>
    <string name="appreciationError">Digits between 0 and 10, both included.</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="pop" translatable="false">Pop</string>
    <string name="acceptDeleteButton">Delete</string>
    <string name="deleteTitleDialog">Delete Album.</string>
    <string name="deleteMessageDialog">Are you sure you want to delete this album?</string>
    <string name="rock" translatable="false">Rock</string>
    <string name="rap" translatable="false">Rap</string>
    <string name="trap" translatable="false">Trap</string>
    <string name="contact_agustin_jimenez_polonio_gmail_com">Contact: agustin.jimenez.polonio@gmail.com</string>
    <string name="agust_n_jim_nez_polonio" translatable="false">Agustín Jiménez Polonio</string>
    <string name="developed_by">Developed by:</string>
    <string name="yourmusic" translatable="false">YourMusic</string>
    <string name="deleteAlbumSuccess">" successfully removed"</string>
    <string name="deleteAlbumError">Could not delete this album.</string>
    <string name="albumToast" translatable="false" />
    <string name="denied">Denied permission</string>
    <string name="choose_picture">Choose picture</string>
    <string name="write_permission_denied">Denied permission</string>
    <string name="albumNotSave">Failed to save album.</string>
    <string name="albumsFound">albums found.</string>
    <string name="filledFields">Fill in all the fields in the right way.</string>
    <string name="Choose">Choose a genre</string>

</resources>