<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2FAA3030"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/artistInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="125dp"
                android:layout_marginEnd="70dp"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/artistName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/artist"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="119dp"
                android:layout_height="34dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artistInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="122dp"
                android:layout_height="56dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="100dp"
                app:boxBackgroundMode="outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/date"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/searchButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="100dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/searchbutton"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="139dp"
                app:layout_constraintEnd_toStartOf="@+id/artistInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_cantante" />

            <ImageView
                android:id="@+id/spinnerAddForm"
                android:layout_width="40dp"
                android:layout_height="34dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="60dp"
                app:layout_constraintEnd_toStartOf="@+id/spinner3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6"
                app:srcCompat="@drawable/ic_anadir" />

            <ImageView
                android:id="@+id/imageDate"
                android:layout_width="46dp"
                android:layout_height="39dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="70dp"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerAddForm"
                app:srcCompat="@drawable/ic_anadir_evento" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>